Fixed Full Bleed Teaser New Number for Expertise Areas

--- a/source/widgets/full_bleed_teaser/full_bleed_teaser.scss
+++ b/source/widgets/full_bleed_teaser/full_bleed_teaser.scss
@@ -4,7 +4,7 @@
 	position: relative;
 
 	img {
-		max-width: 100%;
+		width: 100%;
 	}
 }
 
